[gd_scene load_steps=3 format=3 uid="uid://c175dpomx5ru4"]

[ext_resource type="Script" path="res://addons/sync_spreadsheets/files/sync.gd" id="1_bjlf8"]
[ext_resource type="Script" path="res://addons/sync_spreadsheets/files/http.gd" id="2_3wys5"]

[node name="Sync" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bjlf8")

[node name="HTTP" type="Node" parent="."]
script = ExtResource("2_3wys5")

[node name="VBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="OpenSheetsResource" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Edit CSV Spreadsheets"

[node name="SaveSheetsResource" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Save on disk"

[node name="SyncNow" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Sync Now"

[connection signal="pressed" from="VBoxContainer/OpenSheetsResource" to="." method="_on_open_sheets_resource_pressed"]
[connection signal="pressed" from="VBoxContainer/SaveSheetsResource" to="." method="_on_save_sheets_resource_pressed"]
[connection signal="pressed" from="VBoxContainer/SyncNow" to="." method="_on_sync_now_pressed"]
